# fractal

./: LICENSE  main.py  pyproject.toml
shaders/: mandelbrot.frag  sampler.frag  uv.vert
